Fix view navigation bug + visibility simplification

--- a/scss/ryan/_global.scss
+++ b/scss/ryan/_global.scss
@@ -66,7 +66,7 @@ a{
   margin-top: 14px;
   .button-small{
     background-color: #fff;
-    border: 1px solid #ccc;
+    border: 1px solid #ddd;
     color: #ccc;
     font-weight: bold;
     padding-top: 1px;
