--- a/scss/tw/_post-create.scss
+++ b/scss/tw/_post-create.scss
@@ -248,7 +248,7 @@
 
 	.selected-visibility.private:after{
 		bottom: 100%;
-	    left: 18%;
+	    left: 25%;
 	}
 
 	.selected-visibility.public:after{
@@ -258,7 +258,7 @@
 
 	.selected-visibility.permanent:after{
 		bottom: 100%;
-	    left: 82%;
+	    left: 75%;
 	}
 
 	.button-small{
