--- a/www/css/ryan.css
+++ b/www/css/ryan.css
@@ -3971,7 +3971,7 @@ a {
 /* line 67, ../../scss/ryan/_global.scss */
 .button-bar-wrapper .button-small {
   background-color: #fff;
-  border: 1px solid #ccc;
+  border: 1px solid #ddd;
   color: #ccc;
   font-weight: bold;
   padding-top: 1px;
